combined work and working

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,11 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Specify the GOOGLE Client ID -->
+  <meta name="google-signin-client_id" content="832790293584-mhq1a58egpt895i5ngi77kvtmfgddesc.apps.googleusercontent.com">
   <title>Do-Et</title>
 </head>
 
 <body>
 <div id="root"></div>
+<!-- Load Google Platform Library -->
+<script src="https://apis.google.com/js/platform.js" async defer></script>
 <script src="../dist/bundle.js"></script>
 </body>
 
