--- a/src/public/index.html
+++ b/src/public/index.html
@@ -12,7 +12,7 @@
 <body>
 <div id="root"></div>
 <!-- Load Google Platform Library -->
-<script src="https://apis.google.com/js/platform.js" async defer></script>
+<script src="https://apis.google.com/js/platform.js"></script>
 <script src="../dist/bundle.js"></script>
 </body>
 
